[gd_scene load_steps=34 format=2]

[ext_resource path="res://assets/textures/enemies/cat/Dead (1).png" type="Texture" id=1]
[ext_resource path="res://entities/enemies/Turret.gd" type="Script" id=2]
[ext_resource path="res://entities/enemies/TurretProjectile.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/enemies/DetectionArea.gd" type="Script" id=4]
[ext_resource path="res://assets/textures/green_circle.png" type="Texture" id=5]
[ext_resource path="res://entities/enemies/TurretStateMachine.gd" type="Script" id=6]
[ext_resource path="res://entities/enemies/states/IdleState.gd" type="Script" id=7]
[ext_resource path="res://entities/enemies/states/AlertState.gd" type="Script" id=8]
[ext_resource path="res://entities/enemies/states/WalkState.gd" type="Script" id=9]
[ext_resource path="res://entities/enemies/states/DeadState.gd" type="Script" id=10]
[ext_resource path="res://assets/textures/enemies/cat/Dead (10).png" type="Texture" id=11]
[ext_resource path="res://assets/textures/enemies/cat/Dead (5).png" type="Texture" id=12]
[ext_resource path="res://assets/textures/enemies/cat/Fall (3).png" type="Texture" id=13]
[ext_resource path="res://assets/textures/enemies/cat/Dead (6).png" type="Texture" id=14]
[ext_resource path="res://assets/textures/enemies/cat/Walk (1).png" type="Texture" id=15]
[ext_resource path="res://assets/textures/enemies/cat/Walk (2).png" type="Texture" id=16]
[ext_resource path="res://assets/textures/enemies/cat/Dead (4).png" type="Texture" id=17]
[ext_resource path="res://assets/textures/enemies/cat/Dead (7).png" type="Texture" id=18]
[ext_resource path="res://assets/textures/enemies/cat/Dead (9).png" type="Texture" id=19]
[ext_resource path="res://assets/textures/enemies/cat/Dead (3).png" type="Texture" id=20]
[ext_resource path="res://assets/textures/enemies/cat/Dead (2).png" type="Texture" id=21]
[ext_resource path="res://assets/textures/enemies/cat/Dead (8).png" type="Texture" id=22]
[ext_resource path="res://assets/textures/enemies/cat/Walk (3).png" type="Texture" id=23]
[ext_resource path="res://assets/textures/enemies/cat/Walk (9).png" type="Texture" id=24]
[ext_resource path="res://assets/textures/enemies/cat/Walk (5).png" type="Texture" id=25]
[ext_resource path="res://assets/textures/enemies/cat/Walk (10).png" type="Texture" id=26]
[ext_resource path="res://assets/textures/enemies/cat/Walk (6).png" type="Texture" id=27]
[ext_resource path="res://assets/textures/enemies/cat/Walk (4).png" type="Texture" id=28]
[ext_resource path="res://assets/textures/enemies/cat/Walk (7).png" type="Texture" id=29]
[ext_resource path="res://assets/textures/enemies/cat/Walk (8).png" type="Texture" id=30]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.5511, 31.944 )

[sub_resource type="CircleShape2D" id=2]
radius = 328.39

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 21 ), ExtResource( 20 ), ExtResource( 17 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 18 ), ExtResource( 22 ), ExtResource( 19 ), ExtResource( 11 ), ExtResource( 13 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 23 ), ExtResource( 28 ), ExtResource( 25 ), ExtResource( 27 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 24 ), ExtResource( 26 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[node name="Turret" type="KinematicBody2D"]
position = Vector2( 19.377, 0 )
collision_layer = 4
collision_mask = 5
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
projectile_scene = ExtResource( 3 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="IdleTimer" type="Timer" parent="StateMachine/Idle"]
one_shot = true

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource( 9 )
wander_radius = Vector2( 300, 0 )
speed = 10.0
max_h_speed = 60.0

[node name="Alert" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="FireTimer" type="Timer" parent="StateMachine/Alert"]
one_shot = true

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource( 10 )

[node name="FirePosition" type="Position2D" parent="."]
position = Vector2( -14.6792, 15.2037 )

[node name="RayCast2D" type="RayCast2D" parent="FirePosition"]
enabled = true
cast_to = Vector2( 0, 0 )
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource( 4 )

[node name="green_circle" type="Sprite" parent="DetectionArea"]
modulate = Color( 1, 1, 1, 0.301961 )
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -17.0457, -3.8147e-06 )
scale = Vector2( 0.258938, 0.270785 )
frames = SubResource( 3 )
animation = "walk"
__meta__ = {
"_edit_group_": true
}

[connection signal="timeout" from="StateMachine/Idle/IdleTimer" to="StateMachine/Idle" method="_on_IdleTimer_timeout"]
[connection signal="timeout" from="StateMachine/Alert/FireTimer" to="StateMachine/Alert" method="_on_FireTimer_timeout"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
